--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<div class="ui container">
+    <app-header></app-header>
+    <div class="ui segment">
+        <router-outlet></router-outlet>
+    </div>
+    
+</div>
