--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,11 @@
-<div class="container">
-    <p>temp div</p>
-</div>
+
+    <div class="ui secondary pointing menu">
+        <h2>Project Genshin</h2>
+        
+    </div>
+    <div class="ui segment">
+        <p>Home Page Layout</p>
+        <p>Add other modules</p>
+    </div>
+
+
